--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "nodemon --exec 'electron .'"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "systeminformation": "^4.16.0"
+  },
   "devDependencies": {
     "electron": "^7.1.3",
     "nodemon": "^2.0.1"
