--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "serial-number": "^1.3.0",
     "systeminformation": "^4.16.0"
   },
   "devDependencies": {
