--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "pc-info",
   "version": "1.0.0",
   "main": "main.js",
+  "bin": "bin.js",
   "scripts": {
-    "start": "nodemon --exec 'electron .'"
+    "start": "nodemon --exec 'electron .'",
+    "build": "pkg . --out-path ./build"
   },
   "license": "MIT",
   "dependencies": {
@@ -11,6 +13,7 @@
     "systeminformation": "^4.16.0"
   },
   "devDependencies": {
+    "pkg": "^4.4.2",
     "electron": "^7.1.3",
     "nodemon": "^2.0.1"
   }
