--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "firebase": "^7.7.0",
     "serial-number": "^1.3.0",
     "systeminformation": "^4.16.0"
   },
   "devDependencies": {
-    "pkg": "^4.4.2",
     "electron": "^7.1.3",
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.1",
+    "pkg": "^4.4.2"
   }
 }
